--- a/about.html
+++ b/about.html
@@ -15,10 +15,9 @@ header-img: "img/about-bg.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>写写代码，做做设计，看看产品。<br>
-    世界那么大，我想去看看。</p></blockquote>
+    <blockquote><p>世界那么大，我想去看看。</p></blockquote>
 
-    <p>Hey，我是<strong>魏晓阳</strong>，学生 &amp; 程序员，<a href="http://www.maritimestudies.nus.edu.sg/eoa12.html">Centre for Maritime Studies NUS</a> Research Assistant，balabala。</p>
+    <p>Hey，我是<strong>魏晓阳</strong>，学生 &amp; 程序员，<a href="http://www.maritimestudies.nus.edu.sg/index.html">Centre for Maritime Studies NUS</a> Research Assistant，balabala。</p>
 
     <h5>Talks</h5>
 
@@ -41,12 +40,12 @@ header-img: "img/about-bg.jpg"
     <blockquote><p>Yet another Frontend Engineer. <br>
     Yet another Lifelong Designer.</p></blockquote>
 
-    <p>Hi, Here is <strong>Xiaoyang Wei(黄玄)</strong>，you can call me nickname <strong>Yang</strong>. I'm engineer &amp; designer who is loving to build software.</p>
+    <p>Hi, Here is <strong>Xiaoyang Wei(魏晓阳)</strong>，you can call me nickname <strong>Yang</strong>. I'm engineer &amp; designer who is loving to build software.</p>
 
     <h5>Talks</h5>
 
     <ul>
-    <<li>balabala · 2016</li>
+    <li>balabala · 2016</li>
     </ul>
 
     <h5>Resumes</h5>
