--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,7 +16,7 @@ layout: default
 	<body>
 		<div class="container" style="margin:0;padding:0;width:100%;">
 			<header>
-				<img width="190" height="190" src="images/hux_avatar.png">
+				<img width="190" height="225" src="images/wxy_avatar.png">
 				<h1>Xiaoyang Wei</h1>
 				<p>A student major in Python.</p>
 			</header>
